syntax = "proto3";

package yandex.cloud.priv.yrm.v1.transitional;

import "cloud/identity/proto/yrm/v1/folder.proto";

option go_package = "iam";
option java_outer_classname = "PTFS";

service FolderService {
  rpc List (ListFoldersRequest) returns (ListFoldersResponse);
}

message ListFoldersRequest {
  string id = 1;
  string name = 2;
  string cloud_id = 3;
}

message ListFoldersResponse {
  repeated yandex.cloud.priv.yrm.v1.Folder result = 1;
}